fix - Fixed the Footer Element not showing at the bottom

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,14 @@
 html {
   font-family: "Montserrat", sans-serif;
 }
+
 body {
   background: #eee;
+  height: 100vh;
+}
+
+#root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
